--- a/form.html
+++ b/form.html
@@ -28,19 +28,25 @@
       color: #007bff;
       text-align: center;
     }
+    .nav-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 10px;
+      margin-bottom: 10px;
+    }
     .form-container {
       display: flex;
-      flex-direction: row;
+      flex-wrap: wrap;
       justify-content: space-between;
-      gap: 20px;
       margin-top: 20px;
     }
     .form-section {
-      flex: 1;
+      flex: 0 0 48%;
       background-color: #ffffff;
       border-radius: 12px;
       box-shadow: 0 0 10px rgba(0,0,0,0.1);
       padding: 20px;
+      margin-bottom: 20px;
     }
     .form-title {
       font-weight: bold;
@@ -52,61 +58,63 @@
       content: " *";
       color: red;
     }
-    #successMessage {
-      display: none;
-      text-align: center;
-      margin-top: 10px;
+    .success-message {
       color: green;
       font-weight: bold;
+      text-align: center;
+      margin-bottom: 10px;
     }
   </style>
 </head>
 <body>
   <div class="container-fluid">
     <div class="header">
-      <h2 class="m-0">proMixed CRM</h2>
       <img src="https://raw.githubusercontent.com/proMixed/promixed-crm-api/main/Logo%20for%20heaset.png" class="logo" alt="ProMixed logo">
+      <h2 class="m-0">proMixed CRM</h2>
+    </div>
+    <div class="nav-buttons">
+      <a href="clients.html" class="btn btn-primary">רשימת לקוחות</a>
+      <a href="#" class="btn btn-primary">רשימת הזדמנויות</a>
     </div>
     <div class="forecast-box">תחזית: תתווסף בהמשך</div>
-
-    <div id="successMessage">✅ הלקוח נשמר בהצלחה</div>
 
     <div class="form-container">
       <!-- טופס הזנת לקוח -->
       <div class="form-section">
         <div class="form-title">הוספת לקוח חדש</div>
-        <form id="clientForm">
+        <div id="clientSuccess" class="success-message" style="display:none">הלקוח נשמר בהצלחה</div>
+        <form onsubmit="event.preventDefault(); saveClient();">
           <div class="mb-2">
             <label class="form-label required">שם חברה</label>
-            <input type="text" class="form-control" id="company" required>
+            <input type="text" class="form-control" id="clientCompany" required>
           </div>
           <div class="mb-2">
             <label class="form-label required">שם פרטי</label>
-            <input type="text" class="form-control" id="firstName" required>
+            <input type="text" class="form-control" required>
           </div>
           <div class="mb-2">
             <label class="form-label">שם משפחה</label>
-            <input type="text" class="form-control" id="lastName">
+            <input type="text" class="form-control">
           </div>
           <div class="mb-2">
             <label class="form-label">ת.ז / ח.פ</label>
-            <input type="text" class="form-control" id="idOrCorp">
+            <input type="text" class="form-control">
           </div>
           <div class="mb-2">
             <label class="form-label required">טלפון לקוח</label>
-            <input type="text" class="form-control" id="clientPhone" required>
+            <input type="text" class="form-control" required>
           </div>
           <div class="mb-2">
             <label class="form-label">טלפון חברה</label>
-            <input type="text" class="form-control" id="companyPhone">
+            <input type="text" class="form-control">
           </div>
           <div class="mb-2">
             <label class="form-label">אימייל</label>
-            <input type="email" class="form-control" id="email">
+            <input type="email" class="form-control">
           </div>
           <div class="mb-2">
             <label class="form-label required">מגזר</label>
-            <select class="form-select" id="sector" required>
+            <select class="form-select" required>
               <option>חינוך</option>
               <option>עסקי</option>
               <option>פרטי</option>
@@ -115,11 +123,11 @@
           </div>
           <div class="mb-2">
             <label class="form-label required">שם מזין</label>
-            <input type="text" class="form-control" id="enteredBy" required>
+            <input type="text" class="form-control" required>
           </div>
           <div class="mb-2">
             <label class="form-label">הגיע דרך</label>
-            <select class="form-select" id="source">
+            <select class="form-select">
               <option>טלפון</option>
               <option>אתר</option>
               <option>כנס</option>
@@ -130,17 +138,18 @@
           </div>
           <div class="mb-2">
             <label class="form-label">הערות</label>
-            <textarea class="form-control" id="notes"></textarea>
+            <textarea class="form-control"></textarea>
           </div>
           <div class="text-end text-muted small">תאריך יצירה: <span id="clientTimestamp"></span></div>
           <button type="submit" class="btn btn-primary mt-2">שמור לקוח</button>
         </form>
       </div>
 
-      <!-- טופס הזדמנות נשאר ללא שינוי -->
+      <!-- טופס הזדמנות -->
       <div class="form-section">
         <div class="form-title">הוספת הזדמנות חדשה</div>
-        <form>
+        <div id="opportunitySuccess" class="success-message" style="display:none">ההזדמנות נשמרה בהצלחה</div>
+        <form onsubmit="event.preventDefault(); saveOpportunity();">
           <div class="mb-2">
             <label class="form-label">שם חברה</label>
             <select class="form-select" id="clientSelect">
@@ -227,35 +236,13 @@
         });
     }
 
-    document.getElementById("clientForm").addEventListener("submit", function (e) {
-      e.preventDefault();
-      const data = {
-        company: document.getElementById("company").value,
-        first_name: document.getElementById("firstName").value,
-        last_name: document.getElementById("lastName").value,
-        tz_or_corp: document.getElementById("idOrCorp").value,
-        client_phone: document.getElementById("clientPhone").value,
-        company_phone: document.getElementById("companyPhone").value,
-        email: document.getElementById("email").value,
-        sector: document.getElementById("sector").value,
-        entered_by: document.getElementById("enteredBy").value,
-        source: document.getElementById("source").value,
-        notes: document.getElementById("notes").value
-      };
-      fetch("https://promixed-crm-api.onrender.com/clients", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      })
-        .then(res => res.json())
-        .then(() => {
-          document.getElementById("successMessage").style.display = "block";
-          setTimeout(() => document.getElementById("successMessage").style.display = "none", 3000);
-          loadClientsFromDB();
-          document.getElementById("clientForm").reset();
-          updateTimestamps();
-        });
-    });
+    function saveClient() {
+      document.getElementById('clientSuccess').style.display = 'block';
+    }
+
+    function saveOpportunity() {
+      document.getElementById('opportunitySuccess').style.display = 'block';
+    }
 
     dealValue.addEventListener('input', updateForecast);
     dealStage.addEventListener('change', updateForecast);
